[project]
name = "dark"
version = "0.1.0"
description = ""
authors = [
    {name = "Henning Merklinger",email = "henning.merklinger@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]

[project.scripts]
game = 'dark.game:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
